--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "buffer": "^6.0.3",
+    "emoji-picker-react": "^4.4.7",
     "react": "^18.2.0",
     "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
@@ -18,8 +20,9 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.55.0",
+    "socket.io-client": "^4.5.4",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
